swagger(feat): openApi documentation file was updated
